prevent line breaks in SearchBar by eating up keydown event for Return key

--- a/webroot/css/fancy.css
+++ b/webroot/css/fancy.css
@@ -1220,7 +1220,7 @@ div.searchbar {
 }
 div.searchbar-extender {
 	min-height: 1.3em;
-	padding: 3px;
+	padding-bottom: 3px;
 }
 div.searchbar-entry {
 	position: absolute;
